<resources>
    <string name="app_name">FoodFlow</string>
    <string name="slogan">Unlock your kitchen\'s potential</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="welcomeMsg">Go as a guest to browse meals, or Join our app  and get full features</string>
    <string name="welcomeQuestion">Ready For cooking?</string>
    <string name="join">Join</string>
    <string name="guest">Go as a Guest</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailHint">Ex. username@provider.com</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="google">Sign Up with Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navToLogin">Already have an account? Login</string>
    <string name="navToSignUp">Don\'t have an account, SignUp</string>
    <string name="title">Meal title</string>
    <string name="area">MealArea</string>
    <string name="mealOfTheDay">Meal Of The Day</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="planner">Planner</string>
    <string name="content_description_media">Meal Image</string>
    <string name="ingredient">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="instructionsDetails">A detailed explanation of how to make this meal should appear here, pla pla pla</string>
    <string name="fab_content_desc">Add Meal To Favorites</string>
    <string name="add2Favs">Add to favorites</string>
    <string name="searchByIngredient">Search By Ingredient</string>
    <string name="searchByArea">Search With Area</string>
    <string name="searchByCategory">Explore Categories</string>
    <string name="searchbar_hint">Search Meals</string>
    <string name="searchResult">Search Result</string>
    <string name="ingredients_header">Select Ingredient to view Meals included</string>
    <string name="areas_header">Select Area to get Meals</string>
    <string name="no_results">No Results</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="logout">LogOut</string>
    <string name="guestPrompt">Please Login to unlock this Feature</string>
    <string name="meal">meal</string>
    <string name="no_fav">No favorites</string>

</resources>