<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.view.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:foregroundGravity="center"
        android:src="@drawable/spoon_knife"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/theme_light_primary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        style="@style/inputFieldContainer"

        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/emailField"
            style="@style/inputField"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />

        <ImageView
            style="@style/leadingIcon"
            android:src="@drawable/ic_email" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        style="@style/inputFieldContainer"

        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/passwordField"
            style="@style/inputField"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ImageView
            style="@style/leadingIcon"
            android:src="@drawable/ic_password" />
    </RelativeLayout>


    <Button
        android:id="@+id/loginButton"
        style="@style/activeBtnStyle"
        android:layout_marginBottom="44dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/navToSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/navToSignUp"
        style="@style/hyperLink"
        android:text="@string/navToSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>