<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modalBottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <EditText
            android:id="@+id/emailField"
            style="@style/inputField"
            android:layout_marginTop="10dp"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/passwordField"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordField"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignIn"
            style="@style/activeBtnStyle"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <EditText
            android:id="@+id/confirmPasswordField"
            style="@style/inputField"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signUpButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/signUpButton"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordConfirm" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/activeBtnStyle"
            android:layout_marginTop="8dp"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="@+id/btnGoogleSignIn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnGoogleSignIn"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordField" />

        <EditText
            android:id="@+id/passwordField"
            style="@style/inputField"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordField"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordField"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

        <TextView
            android:id="@+id/tvPasswordConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/passwordConfirm"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/passwordField" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/emailField" />



</androidx.constraintlayout.widget.ConstraintLayout>